fix: Subway Nav Icon Alignment (#765)
* fix: fixed the icons and the subway nav

* fix: added the correct icon files

* chore: updated version numbers

* fix:updated the size of the outer circle

--- a/src/Components/SubwayNav/SubwayNav.scss
+++ b/src/Components/SubwayNav/SubwayNav.scss
@@ -22,7 +22,7 @@
     z-index: 2;
 
     height: 30px;
-    transform: translate(16px);
+    transform: translate(18px);
     background: white;
   }
 
@@ -50,8 +50,8 @@
   border: $cf-grey-95 solid 2px;
   border-radius: 50%;
   color: rgba(0, 0, 0, 0);
-  height: 34px;
-  width: 34px;
+  height: 38px;
+  width: 38px;
 
   display: flex;
   justify-content: center;
